--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/slackhq/hubot-slack/issues"
   },
   "dependencies": {
-    "slack-client": "18f/node-slack-client#1.5.0-handle-reaction-added"
+    "slack-client": "skehlet/node-slack-client#handle-reaction-removed"
   },
   "devDependencies": {
     "coffee-script": "~1.7.1",
